; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/xgbe/extr_xgbe-phy-v2.c_xgbe_phy_sfp_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/xgbe/extr_xgbe-phy-v2.c_xgbe_phy_sfp_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgbe_phy_data = type { i32, i32, i32, i32, i64, i64 }

@XGBE_SFP_BASE_UNKNOWN = common dso_local global i32 0, align 4
@XGBE_SFP_CABLE_UNKNOWN = common dso_local global i32 0, align 4
@XGBE_SFP_SPEED_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xgbe_phy_data*)* @xgbe_phy_sfp_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xgbe_phy_sfp_reset(%struct.xgbe_phy_data* %0) #0 {
  %2 = alloca %struct.xgbe_phy_data*, align 8
  store %struct.xgbe_phy_data* %0, %struct.xgbe_phy_data** %2, align 8
  %3 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %4 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %3, i32 0, i32 5
  store i64 0, i64* %4, align 8
  %5 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %6 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %5, i32 0, i32 4
  store i64 0, i64* %6, align 8
  %7 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %8 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %7, i32 0, i32 0
  store i32 1, i32* %8, align 8
  %9 = load i32, i32* @XGBE_SFP_BASE_UNKNOWN, align 4
  %10 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %11 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @XGBE_SFP_CABLE_UNKNOWN, align 4
  %13 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %14 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 8
  %15 = load i32, i32* @XGBE_SFP_SPEED_UNKNOWN, align 4
  %16 = load %struct.xgbe_phy_data*, %struct.xgbe_phy_data** %2, align 8
  %17 = getelementptr inbounds %struct.xgbe_phy_data, %struct.xgbe_phy_data* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
